fix correct advice

--- a/simple_shelf-web/src/main/resources/templates/index.html
+++ b/simple_shelf-web/src/main/resources/templates/index.html
@@ -227,7 +227,7 @@
                         //默认返回类型都有数据
                         if (summaryCalibersIndex == 0) {
                             //具体产品
-                            $('#' + subTypeTrId + value.productType).append('<td class="table-light center-text">' + value.productType + '</td>')
+                            $('#' + subTypeTrId + value.productType).append('<td class="table-light center-text">' + value.productTypeName + '</td>')
                         }
                         //创建td
                         //对应到subType
